[package]
name = "evolution_counter"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
axum = { version = "0.6.1", features = ["ws"] }
dotenv = "0.15.0"
fake = "2.5.0"
rand = "0.8.5"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tokio = { version = "1.23.0", features = ["full"] }
tower-cookies = "0.8.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
utoipa = { version = "2.4.2", features = ["axum_extras", "uuid", "time", "openapi_extensions"] }
utoipa-swagger-ui = { version = "3.0.1", features = ["axum"] }
uuid = { version = "1.2.2", features = ["v4", "serde", "rand"] }
